# GameEngine

./: .gitignore  Makefile  Makefile2  MakefileLinux  README.md  doc.md
Characters/: Warrior.cpp  Warrior.h
Example/: Makefile
Example/assets/maps/: level1.tmx
Example/include/: MyGame.h  Obstacle.h  Warrior.h
Example/src/: MyGame.cpp  Obstacle.cpp  Warrior.cpp  mainGame.cpp
Notes/: CleanCodeMemo.md  QtLabels.md  Qtdoc.md
ProjectCreator/: ProjectInit.py
TileMapCreator/: QtLabels.md  editor_window.py  main.py  tile_palette.py  tilemap_saver.py  tilemap_scene.py
TileMapCreator/CppRewrite/: .gitignore  CMakeLists.txt
TileMapCreator/CppRewrite/Sources/: ClickableTile.cpp  ClickableTile.h  ImportWindow.cpp  ImportWindow.h  MainWindow.cpp  MainWindow.h  TileMapScene.cpp  TileMapScene.h  TilePalette.cpp  TilePalette.h  main.cpp
assets/maps/: Platforms.tsx  level1.tmj
include/: Animation.h  BoxCollider.h  Camera.h  Character.h  Collider.h  Engine.h  GameMap.h  GameObject.h  GameObjectCollider.h  IGame.h  IObject.h  Input.h  MapParser.h  RigidBody.h  Scene.h  TextureManager.h  TileLayer.h  Timer.h  Transform.h  Vector2D.h
src/: main.cpp
src/Camera/: Camera.cpp
src/Colliders/: BoxCollider.cpp
src/Core/: Engine.cpp
src/Graphics/: Animation.cpp  TextureManager.cpp
src/Inputs/: Input.cpp
src/Map/: MapParser.cpp  TileLayer.cpp
src/Scene/: Scene.cpp
src/Timer/: Timer.cpp
